--- a/requirements.txt
+++ b/requirements.txt
@@ -1,140 +1,129 @@
-alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
-appdirs==1.4.4
-argh==0.26.2
-asgiref==3.3.1
-astroid @ file:///C:/ci/astroid_1592487315634/work
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-atomicwrites==1.4.0
-attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
-autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
-Babel @ file:///tmp/build/80754af9/babel_1607110387436/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bcrypt @ file:///C:/ci/bcrypt_1597936263757/work
-black==19.10b0
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-brotlipy==0.7.0
+-rotlipy==0.7.0
 certifi==2020.12.5
-cffi @ file:///C:/ci/cffi_1606255208697/work
-chardet @ file:///C:/ci/chardet_1607690654534/work
-click @ file:///home/linux1/recipes/ci/click_1610990599742/work
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-cryptography @ file:///C:/ci/cryptography_1607637849569/work
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+cloudpickle==1.6.0
+colorama==0.4.4
+cryptography==3.3.1
 cycler==0.10.0
-decorator @ file:///home/ktietz/src/ci/decorator_1611930055503/work
-defusedxml @ file:///home/ktietz/src/ci_mi/defusedxml_1612808095953/work
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
+decorator==4.4.2
+defusedxml==0.6.0
+diff-match-patch==20200713
 Django==3.0
 docutils==0.16
 entrypoints==0.3
-flake8 @ file:///tmp/build/80754af9/flake8_1601911421857/work
+flake8==3.8.4
 future==0.18.2
 gunicorn==20.0.4
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-imagesize @ file:///home/ktietz/src/ci/imagesize_1611921604382/work
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
-ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1612212935303/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-isort @ file:///tmp/build/80754af9/isort_1612243941122/work
-jedi @ file:///C:/ci/jedi_1606914528444/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
+idna==2.10
+imagesize==1.2.0
+importlib-metadata==2.0.0
+intervaltree==3.1.0
+ipykernel==5.3.4
+ipython==7.20.0
+ipython-genutils==0.2.0
+isort==5.7.0
+jedi==0.17.2
+Jinja2==2.11.3
 joblib==1.0.1
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
-jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-keyring @ file:///C:/ci/keyring_1611778732215/work
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+keyring==22.0.1
 kiwisolver==1.3.1
-lazy-object-proxy @ file:///C:/b/work
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 matplotlib==3.3.4
 mccabe==0.6.1
 mistune==0.8.4
 mypy-extensions==0.4.3
-nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
-nbconvert @ file:///C:/ci/nbconvert_1601914925608/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1610738111109/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1606153767164/work
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.4.3
 numpy==1.20.1
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
+numpydoc==1.1.0
+packaging==20.9
 pandas==1.2.2
-pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
-paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work
+pandocfilters==1.4.3
+paramiko==2.7.2
 parso==0.7.0
 pathspec==0.7.0
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.1.0
+pip==20.3.3
 pluggy==0.13.1
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
-psutil @ file:///C:/ci/psutil_1612298324802/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1598885001695/work
-pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
-Pygments @ file:///tmp/build/80754af9/pygments_1610565767015/work
-pylint @ file:///C:/ci/pylint_1598617153160/work
-pyls-black @ file:///tmp/build/80754af9/pyls-black_1607553132291/work
-pyls-spyder @ file:///tmp/build/80754af9/pyls-spyder_1608134179673/work
-PyNaCl @ file:///C:/ci/pynacl_1595000047588/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
-PySocks @ file:///C:/ci/pysocks_1605287845585/work
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1607972495879/work
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+prompt-toolkit==3.0.8
+psutil==5.8.0
+ptyprocess==0.7.0
+pycodestyle==2.6.0
+pycparser==2.20
+pydocstyle==5.1.1
+pyflakes==2.2.0
+Pygments==2.7.4
+pylint==2.6.0
+pyls-black==0.4.6
+pyls-spyder==0.3.0
+PyNaCl==1.4.0
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+PySocks==1.7.1
+python-dateutil==2.8.1
+python-jsonrpc-server==0.4.0
+python-language-server==0.36.2
+pytz==2021.1
 pywin32==227
 pywin32-ctypes==0.2.0
 PyYAML==5.4.1
 pyzmq==20.0.0
 QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1612458529756/work
+QtAwesome==1.0.1
+qtconsole==5.0.2
 QtPy==1.9.0
-regex @ file:///C:/ci/regex_1606691183008/work
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
+regex==2020.11.13
+requests==2.25.1
+rope==0.18.0
 Rtree==0.9.4
 scikit-learn==0.24.1
 scipy==1.6.0
 seaborn==0.11.1
+setuptools==52.0.0.post20210125
 sip==4.19.13
-six @ file:///C:/ci/six_1605187374963/work
+six==1.15.0
 sklearn==0.0
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
-Sphinx @ file:///tmp/build/80754af9/sphinx_1610133430332/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///home/ktietz/src/ci/sphinxcontrib-htmlhelp_1611920974801/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///home/ktietz/src/ci/sphinxcontrib-serializinghtml_1611920755253/work
-spyder @ file:///C:/ci/spyder_1612463691159/work
-spyder-kernels @ file:///C:/ci/spyder-kernels_1608560699887/work
+snowballstemmer==2.1.0
+sortedcontainers==2.3.0
+Sphinx==3.4.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+spyder==4.2.1
+spyder-kernels==1.10.1
 sqlparse==0.4.1
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
+testpath==0.4.4
+textdistance==4.2.1
 threadpoolctl==2.1.0
-three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
-toml @ file:///tmp/build/80754af9/toml_1592853716807/work
-tornado @ file:///C:/ci/tornado_1606942392901/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-typed-ast @ file:///C:/ci/typed-ast_1610466535590/work
-typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
-ujson @ file:///C:/ci/ujson_1611241570789/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1611694770489/work
-watchdog @ file:///C:/ci/watchdog_1612471251191/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+three-merge==0.1.1
+toml==0.10.1
+tornado==6.1
+traitlets==5.0.5
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+ujson==4.0.2
+urllib3==1.26.3
+watchdog==1.0.2
+wcwidth==0.2.5
 webencodings==0.5.1
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306167264/work
+wheel==0.36.2
+win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.11.2
-yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
-zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
+yapf==0.30.0
+zipp==3.4.0
