--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.3.1
 certifi==2020.12.5
+chardet==4.0.0
 cycler==0.10.0
 Django==3.0
 gunicorn==20.0.4
+idna==2.10
 joblib==1.0.1
 kiwisolver==1.3.1
 matplotlib==3.3.4
@@ -12,6 +14,7 @@ Pillow==8.1.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+requests==2.25.1
 scikit-learn==0.24.1
 scipy==1.5.4
 seaborn==0.11.1
@@ -19,4 +22,5 @@ six==1.15.0
 sklearn==0.0
 sqlparse==0.4.1
 threadpoolctl==2.1.0
+urllib3==1.26.3
 wincertstore==0.2
